--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,6 +10,10 @@
     "cookies",
     "tabs"
   ],
+  "background": {
+    "service_worker": "background.js",
+    "type": "module"
+  },
   "action": {
     "default_popup": "index.html",
     "default_icon": {
